Fixed passage pre style. Will be able to scroll-x when the text is too long

--- a/src/public/css/passage.css
+++ b/src/public/css/passage.css
@@ -124,6 +124,7 @@
     border-left: 1px solid rgba(200, 200, 200, 1);
     background-color: rgba(245, 245, 245, 1);
     font-family: 'Menlo';
+    overflow-x: scroll;
 }
 
 #article-content blockquote {
